[tool.poetry]
name = "onboarding-challenge"
version = "0.1.0"
description = "경량 온보딩 & 점진 누적 결제 유도 시스템"
authors = ["Tele-Chatbot <chatbot@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"